# ableppt

./: .gitignore  README.md  attribution_decomposition_demo.json  award_timeline_panel_demo.json  bubble_demo.json  concentration_demo.json  distribution_history_demo.json  dual_chart_panel_demo.json  event_timeline_demo.json  factor_attribution_panel_demo.json  factor_exposure_demo.json  heatmap_matrix_demo.json  holding_detail_demo.json  job_bubble_demo.json  job_chapter_divider_demo.json  job_combo_gallery_demo.json  job_dashboard_shell_demo.json  job_demo_company_a.json  job_demo_company_b.json  job_dual_axis_20_gallery.json  job_dual_axis_gallery_demo.json  job_factsheet_shell_demo.json  job_gigadevice.json  job_gtm_demo.json  job_hikvision.json  job_market_gallery_demo.json  job_profile_factsheet_demo.json  job_range_snapshot_demo.json  job_range_snapshot_sector_demo.json  job_research_shell_demo.json  job_scatter_demo.json  job_section_cover_demo.json  job_summary_shell_demo.json  job_table_gallery_demo.json  job_waterfall_demo.json  manager_timeline_profile_demo.json  moutai_price_pe_demo.json  performance_compare_demo.json  pyproject.toml  range_snapshot_demo.json  (+11 more)
ableppt/: __init__.py  __main__.py  _ablechart_compat.py  cli.py  engine.py  main.py  operations.py
aim/: aim02.pptx  aim03.pptx
data/: asx200_sector_valuation_snapshot.csv  company_a_peers.csv  company_b_peers.csv  company_b_profitability.csv  data_drawdown.csv  data_returns_vol.csv  data_risk_table.csv  data_sharpe.csv  gigadevice_financial.csv  gigadevice_peers.csv  hikvision_peers.csv  (+8 more)
(+217 files in other folders)
