[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ableppt"
version = "0.1.0"
description = "Financial PowerPoint automation system for data-driven editable PPTX reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-pptx>=1.0.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "sqlalchemy>=2.0.35",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "tushare>=1.4.8",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "lxml",
]

[project.scripts]
ableppt = "ableppt.cli:main"

[tool.setuptools.packages.find]
include = ["ableppt*"]

[tool.pytest.ini_options]
pythonpath = ["."]
